trello sync changes

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,8 @@
 export BOT_TOKEN=bot_token
 export TRELLO_KEY=trello_key
 export TRELLO_TOKEN=trello_token
+export DB_NAME=db_name
+export DB_USER=db_user
+export DB_PASSWORD=dp_password
+export DB_HOST=db_host
+export DB_PORT=dp_port
